--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "express": "^4.17.1",
     "mocha": "^7.1.2",
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "body-parser": "^1.19.0",
+    "request": "^2.88.2"
   },
-  "devDependencies": {},
   "scripts": {
+    "start": "node app.js",
     "test": "mocha app.js"
   },
   "author": "",
