--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 "body-parser": "^1.19.0",
 "request": "^2.88.2",
 "heroku-buildpack-nginx": "^1.0.0",
-"heroku/nodejs": "^14.12.0",
-"heroku/python": "^3.9.1"
+"nodejs": "^14.12.0",
+"python": "^3.9.1"
 },
 "scripts": {
 "start": "node app.js",
