--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-flask==1.1.2
-flask-sqlalchemy==2.4.3
-flask-cors==3.0.8
+Flask==1.1.2
 gunicorn==20.0.4
+requests==2.24.0
+web3==5.12.0
+truffle-contract==4.1.14
