--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-Flask==1.1.2
-gunicorn==20.0.4
-requests==2.24.0
-web3==5.12.0
-truffle==5.2.3
+certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.1.3
+colorama==0.4.6
+Flask==2.2.2
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+pyTelegramBotAPI==4.9.0
+requests==2.28.2
+truffle==0.1.dev0
+urllib3==1.26.14
+Werkzeug==2.2.2
+Whoosh==2.7.4
